--- a/practice.py.ipynb
+++ b/practice.py.ipynb
@@ -405,12 +405,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rbf_svm.score(X_xor_test,y_xor_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "rbf_svm.score(X_xor_test)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
